added npm package for coloring

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "homepage": "https://github.com/lamb-chops/simpleNode#readme",
     "bin": {
         "nsl": "index.js"
+    },
+    "dependencies": {
+        "chalk": "^5.0.1"
     }
 }
